--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "scripts": {
     "shadow:watch": "shadow-cljs watch app",
     "shadow:release": "shadow-cljs release app",
-    "postcss:build": "cross-env TAILWIND_MODE=build postcss src/css/tailwind.css -o ./public/css/main.css --verbose",
-    "postcss:watch": "cross-env TAILWIND_MODE=watch postcss src/css/tailwind.css -o ./public/css/main.css --verbose -w",
+    "postcss:build": "cross-env postcss src/css/tailwind.css -o ./public/css/main.css --verbose",
+    "postcss:watch": "cross-env postcss src/css/tailwind.css -o ./public/css/main.css --verbose -w",
     "postcss:release": "cross-env NODE_ENV=production postcss src/css/tailwind.css -o ./public/css/main.css --verbose",
     "dev": "run-p -l *:watch",
     "release": "run-s *:release"
@@ -12,10 +12,10 @@
     "autoprefixer": "^10.4.12",
     "cssnano": "^5.1.12",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.20",
+    "postcss": "^8.4.23",
     "postcss-cli": "^10.1.0",
-    "shadow-cljs": "^2.20.16",
-    "tailwindcss": "^3.2.4"
+    "shadow-cljs": "^2.23.3",
+    "tailwindcss": "^3.3.2"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
